change add_client to add_user

--- a/templates/add_client.html
+++ b/templates/add_client.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-5 mx-auto">
         <h3>CADASTRE</h3><hr>
-        <form method="post" action="{{url_for('add_client')}}">
+        <form method="post" action="{{url_for('add_user')}}">
             <div class="form-group">
                 <label>Nome</label>
                 <input type="text" name="nome" required class="form-control">
