change all add_client to add_user

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="row">
 <h3 class='text-center text-muted mb-3'></h3>
-<p class="text-right"><a href="{{url_for('add_client')}}" class="btn btn-success">+Novo Cliente</a></p>
+<p class="text-right"><a href="{{url_for('add_user')}}" class="btn btn-success">+Novo Cliente</a></p>
 <table class="table table-bordered">
     <thead>
       <tr>
