fix upercase idade

--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -14,7 +14,7 @@
             </div>
             <div class="form-group">
                 <label>Idade</label>
-                <input type="text" name="Idade" required class="form-control">
+                <input type="text" name="idade" required class="form-control">
             </div>
             <div class="form-group">
                 <label>Cidade</label>
