--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -10,11 +10,11 @@
             </div>
             <div class="form-group">
                 <label>Email</label>
-                <input type="text" name="email" required class="form-control">
+                <input type="email" name="email" required class="form-control">
             </div>
             <div class="form-group">
                 <label>Idade</label>
-                <input type="text" name="idade" required class="form-control">
+                <input type="number" name="idade" required class="form-control">
             </div>
             <div class="form-group">
                 <label>Cidade</label>
