--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -4,29 +4,25 @@
     <div class="col-5 mx-auto">
         <h3>Edite</h3><hr>
         <form method="post" action="{{url_for('edit_user',id=datas.ID)}}">
-            <div class="form group">
+            <div class="form-group">
                 <label>Nome</label>
-                <input type="text" name="nome" required class="form-control" value="{{datas.NOME}}">
+                <input type="text" name="nome" required class="form-control">
             </div>
-            <div class="form group">
+            <div class="form-group">
+                <label>Email</label>
+                <input type="email" name="email" required class="form-control">
+            </div>
+            <div class="form-group">
                 <label>Idade</label>
-                <input type="text" name="email" required class="form-control" value="{{datas.IDADE}}">
+                <input type="number" name="idade" required class="form-control">
             </div>
-            <div class="form group">
-                <label>Rua</label>
-                <input type="text" name="idade" required class="form-control" value="{{datas.RUA}}">
-            </div>
-            <div class="form group">
+            <div class="form-group">
                 <label>Cidade</label>
-                <input type="text" name="cidade" required class="form-control" value="{{datas.CIDADE}}">
+                <input type="text" name="cidade" required class="form-control">
             </div>
-            <div class="form group">
-                <label>Número</label>
-                <input type="text" name="cpf" required class="form-control" value="{{datas.NUMERO}}">
-            </div>
-            <div class="form group">
-                <label>E-mail</label>
-                <input type="text" name="email" required class="form-control" value="{{datas.EMAIL}}">
+            <div class="form-group">
+                <label>CPF</label>
+                <input type="text" name="cpf" required class="form-control">
             </div>
             <input type="submit" value="Confirmar" class="btn btn-primary">
         </form>
