--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
                     <a class="nav-link active" aria-current="page" href="{{url_for('index')}}">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('add_user')}}">Formulário</a>
+                    <a class="nav-link" href="{{url_for('add_user')}}">Formulário de novos clientes</a>
                   </li>
                 </ul>
               </div>
