--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 <table class="table table-bordered">
     <thead>
       <tr>
+        <th scope="col">ID</th>
         <th scope="col">Nome</th>
         <th scope="col">Email</th>
         <th scope="col">Idade</th>
