rollback changes on line 6

--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-5 mx-auto">
         <h3>Edite</h3><hr>
-        <form method="post" action="{{url_for('edit_user')}}">
+        <form method="post" action="{{url_for('edit_user',id=datas[0])}}">
             <div class="form-group">
                 <label>Nome</label>
                 <input type="text" name="nome" required class="form-control">
