--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
         <td>{{row.IDADE}}</td>
         <td>{{row.CIDADE}}</td>
         <td>{{row.CPF}}</td>
-        <td><a href="{{url_for('edit_user',id=row.ID)}}" class="btn btn-primary">Editar</a></td>
-        <td><a href="{{url_for('delete_user',id=row.ID)}}" class="btn btn-danger" onclick="return confirm ('Tem certeza que deseja apagar?')">Deletar</a></td>
+        <td><a href="{{url_for('edit_user',id=row.[0])}}" class="btn btn-primary">Editar</a></td>
+        <td><a href="{{url_for('delete_user',id=row.[0])}}" class="btn btn-danger" onclick="return confirm ('Tem certeza que deseja apagar?')">Deletar</a></td>
       </tr>
       {% endfor %}
     </tbody>
