--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,12 @@
     <tbody>
         {% for row in datas %}
       <tr>
-        <td>{{loop.index}}</td>
-        <td>{{row.NOME}}</td>
-        <td>{{row.EMAIL}}</td>
-        <td>{{row.IDADE}}</td>
-        <td>{{row.CIDADE}}</td>
-        <td>{{row.CPF}}</td>
+        <td>{{ row[0] }}</td>
+        <td>{{ row[1] }}</td>
+        <td>{{ row[2] }}</td>
+        <td>{{ row[3] }}</td>
+        <td>{{ row[4] }}</td>
+        <td>{{ row[5] }}</td> 
         <td><a href="{{url_for('edit_user',id=row.[0])}}" class="btn btn-primary">Editar</a></td>
         <td><a href="{{url_for('delete_user',id=row.[0])}}" class="btn btn-danger" onclick="return confirm ('Tem certeza que deseja apagar?')">Deletar</a></td>
       </tr>
